--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "eth-toolbox",
   "version": "0.0.1",
   "private": true,
+  "license": "BUSL-1.1",
   "scripts": {
     "dev": "vite dev",
     "build": "vite build",
