--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "license": "BUSL-1.1",
   "scripts": {
-    "dev": "vite dev",
+    "dev": "NODE_OPTIONS='--max-http-header-size=1000000' vite dev",
     "build": "vite build",
     "preview": "vite preview",
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
@@ -24,10 +24,13 @@
   },
   "type": "module",
   "dependencies": {
+    "abitype": "^0.9.6",
     "chart.js": "^4.3.2",
     "date-fns": "^2.30.0",
     "openapi-fetch": "^0.7.1",
+    "shiki": "^0.14.3",
     "tippy.js": "^6.3.7",
-    "viem": "^1.4.2"
+    "viem": "^1.4.2",
+    "zod": "^3.22.0"
   }
 }
