--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "abitype": "^0.9.8",
     "chart.js": "^4.4.0",
+    "chartjs-plugin-zoom": "^2.0.1",
     "date-fns": "^2.30.0",
     "openapi-fetch": "^0.7.6",
     "shiki": "^0.14.4",
