--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "devDependencies": {
     "@sveltejs/adapter-auto": "^2.1.0",
     "@sveltejs/kit": "^1.25.0",
+    "@types/nprogress": "^0.2.0",
     "autoprefixer": "^10.4.15",
+    "nprogress": "^0.2.0",
     "postcss": "^8.4.29",
     "svelte": "^4.2.0",
     "svelte-check": "^3.5.1",
