--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "eth-toolbox",
+  "name": "bageth",
   "version": "0.0.1",
   "private": true,
   "license": "BUSL-1.1",
@@ -14,11 +14,11 @@
     "@sveltejs/adapter-auto": "^2.1.0",
     "@sveltejs/kit": "^1.25.0",
     "@types/nprogress": "^0.2.0",
-    "autoprefixer": "^10.4.15",
+    "autoprefixer": "^10.4.16",
     "nprogress": "^0.2.0",
-    "postcss": "^8.4.29",
-    "svelte": "^4.2.0",
-    "svelte-check": "^3.5.1",
+    "postcss": "^8.4.30",
+    "svelte": "^4.2.1",
+    "svelte-check": "^3.5.2",
     "tailwindcss": "^3.3.3",
     "tslib": "^2.6.2",
     "typescript": "^5.2.2",
@@ -33,7 +33,7 @@
     "openapi-fetch": "^0.7.6",
     "shiki": "^0.14.4",
     "tippy.js": "^6.3.7",
-    "viem": "^1.10.9",
+    "viem": "^1.12.1",
     "zod": "^3.22.2"
   }
 }
