--- a/package.json
+++ b/package.json
@@ -11,29 +11,29 @@
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
   },
   "devDependencies": {
-    "@sveltejs/adapter-auto": "^2.1.0",
-    "@sveltejs/kit": "^1.25.1",
-    "@types/nprogress": "^0.2.1",
+    "@sveltejs/adapter-auto": "^2.1.1",
+    "@sveltejs/kit": "^1.27.4",
+    "@types/nprogress": "^0.2.3",
     "autoprefixer": "^10.4.16",
     "nprogress": "^0.2.0",
     "postcss": "^8.4.31",
-    "svelte": "^4.2.1",
-    "svelte-check": "^3.5.2",
-    "tailwindcss": "^3.3.3",
+    "svelte": "^4.2.3",
+    "svelte-check": "^3.6.0",
+    "tailwindcss": "^3.3.5",
     "tslib": "^2.6.2",
     "typescript": "^5.2.2",
-    "vite": "^4.4.9"
+    "vite": "^4.5.0"
   },
   "type": "module",
   "dependencies": {
-    "abitype": "^0.9.8",
+    "abitype": "^0.9.10",
     "chart.js": "^4.4.0",
     "chartjs-plugin-zoom": "^2.0.1",
     "date-fns": "^2.30.0",
-    "openapi-fetch": "^0.7.8",
-    "shiki": "^0.14.4",
+    "echarts": "^5.4.3",
+    "openapi-fetch": "^0.7.10",
+    "shiki": "^0.14.5",
     "tippy.js": "^6.3.7",
-    "viem": "^1.14.0",
-    "zod": "^3.22.2"
+    "viem": "^1.18.9"
   }
 }
